--- a/CodigoFuente/x32/Orbita/Orbita.Compresion/Orbita.Compresion.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Compresion/Orbita.Compresion.csproj
@@ -21,7 +21,7 @@
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x86\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DocumentationFile>bin\Release\Orbita.Compresion.xml</DocumentationFile>
+    <DocumentationFile>bin\x86\Debug\Orbita.Compresion.XML</DocumentationFile>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <CodeAnalysisLogFile>bin\Debug\Orbita.Compresion.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
@@ -49,7 +49,7 @@
     <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
     <CodeAnalysisRuleDirectories>;c:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
     <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
-    <DocumentationFile>bin\Release\Orbita.Compresion.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Orbita.Compresion.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
