--- a/CodigoFuente/x32/Orbita/Orbita.Trazabilidad/Orbita.Trazabilidad.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Trazabilidad/Orbita.Trazabilidad.csproj
@@ -40,7 +40,7 @@
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;CODE_ANALYSIS;TRACE</DefineConstants>
-    <DocumentationFile>bin\Debug\Orbita.Trazabilidad.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\Orbita.Trazabilidad.XML</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
@@ -58,7 +58,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>bin\Release\Orbita.Trazabilidad.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Orbita.Trazabilidad.XML</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
