--- a/CodigoFuente/x32/Orbita.VA/Orbita.VA.Funciones/Orbita.VA.Funciones.csproj
+++ b/CodigoFuente/x32/Orbita.VA/Orbita.VA.Funciones/Orbita.VA.Funciones.csproj
@@ -162,6 +162,12 @@
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Emgu.CV">
+      <HintPath>..\..\Comun\VA\OpenCV\Emgu.CV.dll</HintPath>
+    </Reference>
+    <Reference Include="Emgu.Util">
+      <HintPath>..\..\Comun\VA\OpenCV\Emgu.Util.dll</HintPath>
+    </Reference>
     <Reference Include="Orbita.BBDD, Version=13.32.3.1, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\..\Comun\Orbita\Orbita.BBDD.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
@@ -200,11 +206,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Clases\BaseDatos\AppBD.cs" />
+    <Compile Include="Clases\OpenCV\OHerramientasOpenCV.cs" />
     <Compile Include="Clases\Logs\OExtensionLogs.cs" />
-    <Compile Include="Clases\Core\OFuncionVision.cs" />
-    <Compile Include="Clases\Core\OFuncionVisionPro.cs" />
-    <Compile Include="Clases\Core\OFuncionVisionLPR.cs" />
-    <Compile Include="Clases\Core\OFuncionVisionCCR.cs" />
+    <Compile Include="Clases\FuncionVision\OFuncionVision.cs" />
+    <Compile Include="Clases\VisionPro\OFuncionVisionPro.cs" />
+    <Compile Include="Clases\NeuralLabs\OFuncionVisionLPR.cs" />
+    <Compile Include="Clases\NeuralLabs\OFuncionVisionCCR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -236,6 +243,7 @@
       <Name>Orbita.VA.Comun</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy "$(TargetDir)Orbita.VA.Funciones.dll" "$(ProjectDir)\..\..\Comun\Orbita" /R /Y /I
