--- a/CodigoFuente/x32/Orbita.VA/Orbita.VA.Funciones/Orbita.VA.Funciones.csproj
+++ b/CodigoFuente/x32/Orbita.VA/Orbita.VA.Funciones/Orbita.VA.Funciones.csproj
@@ -175,6 +175,9 @@
     <Reference Include="Orbita.MS">
       <HintPath>..\..\Comun\Orbita\Orbita.MS.dll</HintPath>
     </Reference>
+    <Reference Include="Orbita.Trazabilidad">
+      <HintPath>..\..\Comun\Orbita\Orbita.Trazabilidad.dll</HintPath>
+    </Reference>
     <Reference Include="Orbita.Utiles, Version=13.43.8.1, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\..\Comun\Orbita\Orbita.Utiles.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
