--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Autenticacion/Orbita.Controles.Autenticacion.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Autenticacion/Orbita.Controles.Autenticacion.csproj
@@ -22,7 +22,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <PlatformTarget>x86</PlatformTarget>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>bin\Debug\Orbita.Controles.Autenticacion.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\Orbita.Controles.Autenticacion.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <PlatformTarget>x86</PlatformTarget>
