--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.VA/Orbita.Controles.VA.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.VA/Orbita.Controles.VA.csproj
@@ -40,7 +40,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\x86\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>bin\x86\Release\Orbita.Controles.VA.XML</DocumentationFile>
+    <DocumentationFile>bin\x86\Release\Orbita.Controles.VA.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
