--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Framework.Core/Orbita.Framework.Core.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Framework.Core/Orbita.Framework.Core.csproj
@@ -14,10 +14,10 @@
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>%24/Librerias/CodigoFuente/x32/Orbita.Controles/Orbita.Framework.Core</SccProjectName>
+    <SccLocalPath>.</SccLocalPath>
+    <SccAuxPath>http://01x0019:8080/tfs/orbitasoftware</SccAuxPath>
+    <SccProvider>{4CA58AB2-18FA-4F8D-95D4-32DDF27D184C}</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -57,7 +57,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Clases abstratas\Persistencia.cs" />
+    <Compile Include="Colecciones\TypeToPropertyInfoDictionaryAssociation.cs" />
+    <Compile Include="Colecciones\PropertyInfoDictionary.cs" />
+    <Compile Include="Colecciones\TargetDictionary.cs" />
+    <Compile Include="Colecciones\TargetCollection.cs" />
+    <Compile Include="Configuración\ArrayParameterAttribute.cs" />
+    <Compile Include="Configuración\PropertyHelper.cs" />
+    <Compile Include="Configuración\FactoryHelper.cs" />
+    <Compile Include="Targets\TargetConfiguration.cs" />
+    <Compile Include="Utilidades\Utiles.cs" />
+    <Compile Include="Persistencia\Persistencia.cs" />
+    <Compile Include="Colecciones\TypeDictionary.cs" />
+    <Compile Include="Targets\TargetFactory.cs" />
+    <Compile Include="Configuración\XmlConfiguration.cs" />
+    <Compile Include="Targets\TargetAttribute.cs" />
+    <Compile Include="Configuración\RequiredParameterAttribute.cs" />
+    <Compile Include="Targets\Configurador.cs" />
     <Compile Include="Enumerados\Idioma.cs" />
     <Compile Include="Enumerados\EstadoVentana.cs" />
     <Compile Include="Enumerados\TipoForm.cs" />
@@ -65,6 +80,7 @@
     <Compile Include="Extensiones internas\ExtendedFile.cs" />
     <Compile Include="Extensiones internas\ExtendedObject.cs" />
     <Compile Include="Extensiones internas\ExtendedString.cs" />
+    <Compile Include="Interfaces\IFormConfigurador.cs" />
     <Compile Include="Interfaces\IPersistencia.cs" />
     <Compile Include="Interfaces\IFormIdioma.cs" />
     <Compile Include="Interfaces\IFormPlugin.cs" />
@@ -82,14 +98,19 @@
     <Compile Include="Plugins\PluginOTreeView.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Colecciones\CollectionPluginConfiguracion.cs" />
+    <Compile Include="Colecciones\PluginConfiguracionCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Targets\Target.cs" />
+    <Compile Include="Targets\Autenticación.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Orbita.Controles.Contenedores\Orbita.Controles.Contenedores.csproj">
       <Project>{B953E685-3E2D-4F93-BB80-805427BBB8A2}</Project>
       <Name>Orbita.Controles.Contenedores</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Configuración\Configuracion.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
