--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Comunes/Orbita.Controles.Comunes.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Comunes/Orbita.Controles.Comunes.csproj
@@ -82,9 +82,14 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Comun\Controles\Infragistics\V11-2\Infragistics2.Win.UltraWinStatusBar.v11.2.dll</HintPath>
     </Reference>
+    <Reference Include="Infragistics2.Win.UltraWinTabbedMdi.v11.2, Version=11.2.20112.2050, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb" />
+    <Reference Include="Infragistics2.Win.UltraWinTabControl.v11.2, Version=11.2.20112.2050, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb" />
     <Reference Include="Infragistics2.Win.v11.2, Version=11.2.20112.2050, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Comun\Controles\Infragistics\V11-2\Infragistics2.Win.v11.2.dll</HintPath>
+    </Reference>
+    <Reference Include="Orbita.Controles.Contenedores">
+      <HintPath>..\Orbita.Controles.Contenedores\obj\x86\Release\Orbita.Controles.Contenedores.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -121,6 +126,12 @@
     <Compile Include="Clases\Propiedades y métodos\OListBox.cs" />
     <Compile Include="Clases\Propiedades y métodos\OApariencia.cs" />
     <Compile Include="Clases\Propiedades y métodos\OUltraLabel.cs" />
+    <Compile Include="Custom\OrbitaTecladoNumerico.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Custom\OrbitaTecladoNumerico.designer.cs">
+      <DependentUpon>OrbitaTecladoNumerico.cs</DependentUpon>
+    </Compile>
     <Compile Include="Custom\OrbitaBarraProgreso.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -268,6 +279,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Custom\OrbitaTecladoNumerico.resx">
+      <DependentUpon>OrbitaTecladoNumerico.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Custom\OrbitaBarraProgreso.resx">
       <DependentUpon>OrbitaBarraProgreso.cs</DependentUpon>
     </EmbeddedResource>
