--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Shared/Orbita.Controles.Shared.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Shared/Orbita.Controles.Shared.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clases\Propiedades y métodos\OToolTip.cs" />
     <Compile Include="Custom\OrbitaUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -69,6 +70,12 @@
       <DependentUpon>OrbitaUserControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UC\OrbitaToolTip.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="UC\OrbitaToolTip.Designer.cs">
+      <DependentUpon>OrbitaToolTip.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Custom\OrbitaUserControl.resx">
