--- a/CodigoFuente/x64/Orbita.Controles/Orbita.Controles.Comunicaciones/Orbita.Controles.Comunicaciones.csproj
+++ b/CodigoFuente/x64/Orbita.Controles/Orbita.Controles.Comunicaciones/Orbita.Controles.Comunicaciones.csproj
@@ -51,22 +51,26 @@
     <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
     <CodeAnalysisRuleDirectories>;c:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
-    <DocumentationFile>bin\Release\Orbita.Controles.Comunicaciones.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Orbita.Controles.Comunicaciones.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Framework|x86'">
     <OutputPath>bin\x86\Framework\</OutputPath>
+    <DocumentationFile>bin\x86\Framework\Orbita.Controles.Comunicaciones.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Debug\</OutputPath>
+    <DocumentationFile>bin\x64\Debug\Orbita.Controles.Comunicaciones.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Release\</OutputPath>
+    <DocumentationFile>bin\x64\Release\Orbita.Controles.Comunicaciones.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Framework|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Framework\</OutputPath>
+    <DocumentationFile>bin\x64\Framework\Orbita.Controles.Comunicaciones.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL">
