--- a/CodigoFuente/x64/Orbita.Controles/Orbita.Framework.Core/Orbita.Framework.Core.csproj
+++ b/CodigoFuente/x64/Orbita.Controles/Orbita.Framework.Core/Orbita.Framework.Core.csproj
@@ -47,18 +47,22 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Framework|x86'">
     <OutputPath>bin\x86\Framework\</OutputPath>
+    <DocumentationFile>bin\x86\Framework\Orbita.Framework.Core.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Debug\</OutputPath>
+    <DocumentationFile>bin\x64\Debug\Orbita.Framework.Core.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Release\</OutputPath>
+    <DocumentationFile>bin\x64\Release\Orbita.Framework.Core.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Framework|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Framework\</OutputPath>
+    <DocumentationFile>bin\x64\Framework\Orbita.Framework.Core.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
